Fix spacing in mobile offer filter

--- a/src/pages/Applicant/Home/Feed/Filters/styles.module.scss
+++ b/src/pages/Applicant/Home/Feed/Filters/styles.module.scss
@@ -28,19 +28,21 @@
   padding-top: $spacing-xl;
 }
 
-.mobileApplyFilters {
-  background: $dashboardBackgroundWhite;
-  height: 100%;
-  overflow-y: scroll;
-}
-
 .openMobileApplyFilters {
   display: none;
+  margin-left: $spacing-s;
 }
 
 .mobileApplyFiltersHeader,
 .mobileApplyFilters {
   padding: 0 $spacing-m;
+}
+
+.mobileApplyFilters {
+  background: $dashboardBackgroundWhite;
+  height: 100%;
+  overflow-y: scroll;
+  padding-bottom: $spacing-m;
 }
 
 .mobileApplyFiltersHeader {
